--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,29 @@ body {
     margin: 0 auto;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+.start {
+    color: #ffffff;
+    margin-bottom: 20px;
+    padding: 10px 16px;
+    background: #1f1f1f;
+    border: none;
+    border-radius: 5px;
+}
+
+.start:hover {
+    cursor: pointer;
+    background: #0f0f0f;
+}
+
 .alert {
+    position: absolute;
+    top: 40%;
+    z-index: 10000;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
     font-weight: bold;
@@ -33,6 +50,7 @@ body {
 
 .desert {
     position: relative;
+    overflow-x: hidden;
     background: url('../img/t-rex-background.png') repeat-x;
     width: 100%;
     height: 200px;
